# BoilerplateGenerator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements  setup.py
boilerplate_generator/: __main__.py
boilerplate_generator/constraints/boilerplate_generator/: create_constraint_unicity.constraint  create_entity_unicity.constraint  create_feature_unicity.constraint  create_project_unicity.constraint  create_usecase_unicity.constraint  delete_entity_usecase.constraint
boilerplate_generator/features/boilerplate_generator/: create_constraint.feature  create_entity.feature  create_feature.feature  create_project.feature  create_usecase.feature  delete_constraint.feature  delete_entity.feature  delete_feature.feature  delete_project.feature  delete_usecase.feature  generate_constraint.feature  generate_entity.feature  generate_feature.feature  generate_structure_project.feature  (+16 more)
boilerplate_generator/templates/: .flake8.j2  .gitignore.j2  LICENSE.j2  README.md.j2  __init__.py.j2  abstract_gateway.py.j2  constraint.constraint.j2  container.py.j2  debug.py.j2  entity.py.j2  entity_dto.py.j2  entity_gateway.py.j2  entity_inmemory_repository.py.j2  entity_view.py.j2  factory.py.j2  feature.feature.j2  inmemory_persist.py.j2  pyproject.toml.j2  requirements.j2  setup.py.j2  singleton.py.j2  test_constraint.py.j2  test_feature.py.j2  usecase.py.j2  usecase_adapter.py.j2  usecase_container.py.j2  usecase_inputport.py.j2  usecase_inputport_builder.py.j2  usecase_outputport.py.j2  usecase_outputport_builder.py.j2
boilerplate_generator/tests/: factory.py
(+317 files in other folders)
